Closed Bug 1734858 Opened 3 years ago Closed 3 years ago

[Fission] Apply the fix for bug 1725680 also to bfcached pages

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Fission Milestone MVP
Tracking Status
firefox-esr78 --- disabled
firefox-esr91 --- disabled
firefox93 --- disabled
firefox94 --- fixed
firefox95 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file)

There is one case where bug 1725680 didn't deal with bfcached pages. A patch coming

The issue is that when going back from a non-bfcacheable page to a bfcacheable page and the first page
modifies requested index around the same time, UpdateIndex() doesn't have the right requested index. This is a variant of bug 1725680.
The test case loads a non-bfcacheable page, then bfcachable, then another non-bfcacheable and then goes back and forward.
Without the patch indexes go wrong and forward doesn't do anything.

Blocks: 1729545
Fission Milestone: --- → MVP
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/01abda14e67b
use the real index when updating the index after a bfcache load, r=peterv
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Olli, should we uplift your index fix to Beta 94 for Fission MVP?

Flags: needinfo?(bugs)

Yes

Flags: needinfo?(bugs)

Comment on attachment 9244993 [details]
Bug 1734858, use the real index when updating the index after a bfcache load, r=peterv

Beta/Release Uplift Approval Request

  • User impact if declined: Going back or forward in the session history may not do what the user expects
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This fixes a very specific edge case when a non-bfcached page modifies session history just when we're about to load a page from bfcache
  • String changes made/needed:
Attachment #9244993 - Flags: approval-mozilla-beta?

Comment on attachment 9244993 [details]
Bug 1734858, use the real index when updating the index after a bfcache load, r=peterv

Approved for 94.0b6

Attachment #9244993 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: